force-app/main/default/objects/Ciclo_prepa__c/Ciclo_prepa__c.object-meta.xml
<CustomObject>
    <description>Ciclos académicos de Prepas UPAEP para seguimiento de interesados, aspirantes, alumnos y egresados</description>
    <label>Ciclo Prepa</label>
    <nameField>
        <label>Nombre de Ciclo prepa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ciclos Prepa</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>