force-app/main/default/objects/Ciclo_prepa__c/fields/Acepto_IFAI__c.field-meta.xml
<CustomField>
    <fullName>Acepto_IFAI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acepto Terminos IFAI</description>
    <label>IFAI - Acepto Termino</label>
    <type>Checkbox</type>
</CustomField>