force-app/main/default/objects/Ciclo_prepa__c/fields/Acepto_IFAI_IP__c.field-meta.xml
<CustomField>
    <fullName>Acepto_IFAI_IP__c</fullName>
    <description>IP desde donde aceptó términos IFAI</description>
    <label>IFAI - Acepto Termino IP</label>
    <length>25</length>
    <type>Text</type>
</CustomField>