force-app/main/default/objects/Ciclo_prepa__c/fields/ACS__c.field-meta.xml
<CustomField>
    <fullName>ACS__c</fullName>
    <formula>IF ( (ISPICKVAL(Estatus_Solicitud_Admision__c, &apos;SOLICITUD SIN DOCUMENTOS&apos;) ||
      ISPICKVAL( Estatus_Solicitud_Admision__c , &apos;SOLICITUD CON DOCUMENTOS&apos;) || 
      ISPICKVAL( Estatus_Solicitud_Admision__c, &apos;SOLICITUD VALIDADA SIN DOCUMENTOS&apos;) || 
      ISPICKVAL(Estatus_Solicitud_Admision__c, &apos;SOLICITUD VALIDADA CON DOCUMENTOS&apos;) || 
      ISPICKVAL(Estatus_Solicitud_Admision__c, &apos;SOLICITUD Y DOCUMENTOS VALIDADOS&apos; ))  
    &amp;&amp; Aspirante_Desertor__c = false, 1,0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ACS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>