force-app/main/default/objects/Ciclo_prepa__c/fields/Actualiz_Datos__c.field-meta.xml
<CustomField>
    <fullName>Actualiz_Datos__c</fullName>
    <formula>IF( ProgramaInteres__c  &lt;&gt; null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actualizó Datos</label>
    <type>Checkbox</type>
</CustomField>