force-app/main/default/objects/Ciclo_prepa__c/fields/ActualizacionDatos__c.field-meta.xml
<CustomField>
    <fullName>ActualizacionDatos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actualización de datos</label>
    <type>Checkbox</type>
</CustomField>