force-app/main/default/objects/Ciclo_prepa__c/fields/Agencia_SocEco__c.field-meta.xml
<CustomField>
    <fullName>Agencia_SocEco__c</fullName>
    <label>Agencia de Est.  Socioeconómico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concepto RH</fullName>
            </value>
            <value>
                <fullName>ACEYE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>