force-app/main/default/objects/Ciclo_prepa__c/fields/Aspirante_Activo__c.field-meta.xml
<CustomField>
    <fullName>Aspirante_Activo__c</fullName>
    <formula>if(( RecordType.Name = &apos;Aspirante&apos;  &amp;&amp; (Periodo__c = &apos;OTOÑO 2017&apos;  || Periodo__c = &apos;VERANO 2017&apos; || Periodo__c = &apos;INVIERNO 2017&apos;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aspirante Activo</label>
    <type>Checkbox</type>
</CustomField>