force-app/main/default/objects/Ciclo_prepa__c/fields/Aspirante_Desertor__c.field-meta.xml
<CustomField>
    <fullName>Aspirante_Desertor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el aspirante desertó UNISOFT</description>
    <inlineHelpText>Indica si el aspirante desertó en UNISOFT</inlineHelpText>
    <label>Aspirante Desertor</label>
    <type>Checkbox</type>
</CustomField>