force-app/main/default/objects/Ciclo_prepa__c/fields/Aspirante_Duplicado__c.field-meta.xml
<CustomField>
    <fullName>Aspirante_Duplicado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si el aspirante está duplicado en UNISOFT</description>
    <label>Aspirante Duplicado</label>
    <type>Checkbox</type>
</CustomField>