force-app/main/default/objects/Ciclo_prepa__c/fields/Aspirante_PSE__c.field-meta.xml
<CustomField>
    <fullName>Aspirante_PSE__c</fullName>
    <label>Aspirante PSE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>