force-app/main/default/objects/Ciclo_prepa__c/fields/Aspirante_Secuencia__c.field-meta.xml
<CustomField>
    <fullName>Aspirante_Secuencia__c</fullName>
    <description>ID + Secuencia de UNISOFT del rol de aspirante</description>
    <externalId>true</externalId>
    <label>Secuencia Unisoft Aspirante</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>