force-app/main/default/objects/Ciclo_prepa__c/fields/Auto_DescProm__c.field-meta.xml
<CustomField>
    <fullName>Auto_DescProm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla para autorizar el descuento de promoción</description>
    <label>Activación de Descuento</label>
    <type>Checkbox</type>
</CustomField>