force-app/main/default/objects/Ciclo_prepa__c/fields/Autorizaci_n_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Autorizaci_n_Cobranza__c</fullName>
    <label>Autorización Cobranza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entrega de Título</fullName>
            </value>
            <value>
                <fullName>Inicio de Proceso de Titulación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>