force-app/main/default/objects/Ciclo_prepa__c/fields/Beca1__c.field-meta.xml
<CustomField>
    <fullName>Beca1__c</fullName>
    <label>Beca 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>