force-app/main/default/objects/Ciclo_prepa__c/fields/Beca2__c.field-meta.xml
<CustomField>
    <fullName>Beca2__c</fullName>
    <label>Beca 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>