force-app/main/default/objects/Ciclo_prepa__c/fields/Beca3__c.field-meta.xml
<CustomField>
    <fullName>Beca3__c</fullName>
    <label>Beca 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>