force-app/main/default/objects/Ciclo_prepa__c/fields/Beca_Ordinaria_Porcentaje_Resolutivo__c.field-meta.xml
<CustomField>
    <fullName>Beca_Ordinaria_Porcentaje_Resolutivo__c</fullName>
    <description>Beca Ordinaria Porcentaje Resolutivo</description>
    <label>Beca Ordinaria Porcentaje Resolutivo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>