force-app/main/default/objects/Ciclo_prepa__c/fields/BecaOrdinariaPorcentajeAutorizado__c.field-meta.xml
<CustomField>
    <fullName>BecaOrdinariaPorcentajeAutorizado__c</fullName>
    <label>Beca Ordinaria Porcentaje Autorizado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>