force-app/main/default/objects/Ciclo_prepa__c/fields/BecaOrdinariaPorcentajeSolicitado__c.field-meta.xml
<CustomField>
    <fullName>BecaOrdinariaPorcentajeSolicitado__c</fullName>
    <label>Beca Ordinaria Porcentaje Solicitado</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>