force-app/main/default/objects/Ciclo_prepa__c/fields/BufeteJuridico__c.field-meta.xml
<CustomField>
    <fullName>BufeteJuridico__c</fullName>
    <label>Nombre de Despacho de Cobran</label>
    <length>255</length>
    <type>Text</type>
</CustomField>