force-app/main/default/objects/Ciclo_prepa__c/fields/Campana__c.field-meta.xml
<CustomField>
    <fullName>Campana__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primera campaña de promción con la que el interesado / aspirante tuvo primer contacto con UPAEP</description>
    <label>Campaña Origen</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <type>Lookup</type>
</CustomField>