force-app/main/default/objects/Ciclo_prepa__c/fields/Cargo5Sem__c.field-meta.xml
<CustomField>
    <fullName>Cargo5Sem__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Extra 5to Sem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>