force-app/main/default/objects/Ciclo_prepa__c/fields/Cargo_InscripcionNI__c.field-meta.xml
<CustomField>
    <fullName>Cargo_InscripcionNI__c</fullName>
    <formula>IF( Periodo__c = &quot;OTOÑO 2018&quot;, Plantel_Relacion__r.Cargo_InscripcionOtono__c, IF(Periodo__c = &quot;PRIMAVERA 2018&quot;, Plantel_Relacion__r.Cargo_InscripcionPrim__c,Plantel_Relacion__r.Cargo_InscripcionVerano__c ) )</formula>
    <label>Cargo Inscripción NI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>