force-app/main/default/objects/Ciclo_prepa__c/fields/CarreraInteres__c.field-meta.xml
<CustomField>
    <fullName>CarreraInteres__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrera de Interés</label>
    <referenceTo>Carrera__c</referenceTo>
    <relationshipLabel>Ciclos Prepa (Carrera de Interés)</relationshipLabel>
    <relationshipName>Ciclos_Prepa1</relationshipName>
    <type>Lookup</type>
</CustomField>