force-app/main/default/objects/Ciclo_prepa__c/fields/CB_BuroCredito__c.field-meta.xml
<CustomField>
    <fullName>CB_BuroCredito__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buró de Crédito</label>
    <type>Checkbox</type>
</CustomField>