force-app/main/default/objects/Ciclo_prepa__c/fields/CelularPersonal__c.field-meta.xml
<CustomField>
    <fullName>CelularPersonal__c</fullName>
    <label>Celular personal</label>
    <type>Phone</type>
</CustomField>