force-app/main/default/objects/Ciclo_prepa__c/fields/Clave_Beca_Ordinaria__c.field-meta.xml
<CustomField>
    <fullName>Clave_Beca_Ordinaria__c</fullName>
    <label>Clave Beca Ordinaria</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>