force-app/main/default/objects/Ciclo_prepa__c/fields/Clave_Descuento__c.field-meta.xml
<CustomField>
    <fullName>Clave_Descuento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clave Descuento</label>
    <referenceTo>Descuentos__c</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <type>Lookup</type>
</CustomField>