force-app/main/default/objects/Ciclo_prepa__c/fields/Comentarios_Promocion_Resolutivo__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Promocion_Resolutivo__c</fullName>
    <description>Comentarios Promoción sobre Resolutivo</description>
    <label>Comentarios Promoción sobre Resolutivo</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>