force-app/main/default/objects/Ciclo_prepa__c/fields/ComoTeEnteraste__c.field-meta.xml
<CustomField>
    <fullName>ComoTeEnteraste__c</fullName>
    <description>Indica como se enteró de prepa UPAEP</description>
    <label>Como te enteraste</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGENDA DE LA ESCUELA</fullName>
            </value>
            <value>
                <fullName>AMIGOS</fullName>
            </value>
            <value>
                <fullName>ANUNCIO INTERNET</fullName>
            </value>
            <value>
                <fullName>ANUNCIOS ESPECTACULARES</fullName>
            </value>
            <value>
                <fullName>BUSQUEDA INTERNET</fullName>
            </value>
            <value>
                <fullName>COMPAÑERO DE TRABAJO</fullName>
            </value>
            <value>
                <fullName>EDUCAEDU</fullName>
            </value>
            <value>
                <fullName>EGRESADO UPAEP</fullName>
            </value>
            <value>
                <fullName>EXA-UPAEP</fullName>
            </value>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>FAMILIARES</fullName>
            </value>
            <value>
                <fullName>MAESTROS</fullName>
            </value>
            <value>
                <fullName>MENSAJE DE TEXTO AL CELULAR</fullName>
            </value>
            <value>
                <fullName>OTROS</fullName>
            </value>
            <value>
                <fullName>PÁGINA DE INTERNET UPAEP</fullName>
            </value>
            <value>
                <fullName>PERIODICO</fullName>
            </value>
            <value>
                <fullName>PERIÓDICO ONLINE</fullName>
            </value>
            <value>
                <fullName>RADIO</fullName>
            </value>
            <value>
                <fullName>RADIO ONLINE</fullName>
            </value>
            <value>
                <fullName>REVISTAS</fullName>
            </value>
            <value>
                <fullName>TELEVISION</fullName>
            </value>
            <value>
                <fullName>TELEVISIÓN ABIERTA</fullName>
            </value>
            <value>
                <fullName>TELEVISIÓN DE PAGA</fullName>
            </value>
            <value>
                <fullName>TWITTER</fullName>
            </value>
            <value>
                <fullName>VISITA A MI EMPRESA/INSTITUCION</fullName>
            </value>
            <value>
                <fullName>VISITA A MI ESCUELA</fullName>
            </value>
            <value>
                <fullName>VIVENCIA VOCACIONAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>