force-app/main/default/objects/Ciclo_prepa__c/fields/Convenio_Escuela__c.field-meta.xml
<CustomField>
    <fullName>Convenio_Escuela__c</fullName>
    <description>Convenio con la escuela de procedencia</description>
    <formula>Escuela_Procedencia__r.Convenio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Convenio de Escuela de Procedencia</label>
    <type>Text</type>
</CustomField>