force-app/main/default/objects/Ciclo_prepa__c/fields/CorreoPersonal__c.field-meta.xml
<CustomField>
    <fullName>CorreoPersonal__c</fullName>
    <label>Correo electrónico personal</label>
    <type>Email</type>
</CustomField>