force-app/main/default/objects/Ciclo_prepa__c/fields/Decuento_Contabilizado__c.field-meta.xml
<CustomField>
    <fullName>Decuento_Contabilizado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decuento Contabilizado</label>
    <type>Checkbox</type>
</CustomField>