force-app/main/default/objects/Ciclo_prepa__c/fields/Descuento_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Descuento_Inscripcion__c</fullName>
    <formula>Clave_Descuento__r.Insc_Porcentaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento de Inscripción</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>