force-app/main/default/objects/Ciclo_prepa__c/fields/Descuento_S_Pago__c.field-meta.xml
<CustomField>
    <fullName>Descuento_S_Pago__c</fullName>
    <formula>IF ( Monto_inscripcion__c &lt;= 0 &amp;&amp; Clave_Descuento__c &lt;&gt; NULL, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuentos Asignados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>