force-app/main/default/objects/Ciclo_prepa__c/fields/Desertor__c.field-meta.xml
<CustomField>
    <fullName>Desertor__c</fullName>
    <formula>IF ( Aspirante_Desertor__c = true , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DES</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>