force-app/main/default/objects/Ciclo_prepa__c/fields/Devolucion_Inscripcion__c.field-meta.xml
<CustomField>
    <fullName>Devolucion_Inscripcion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Devolución Inscripción</description>
    <label>Devolución Inscripción</label>
    <type>Checkbox</type>
</CustomField>