force-app/main/default/objects/Ciclo_prepa__c/fields/DicNA__c.field-meta.xml
<CustomField>
    <fullName>DicNA__c</fullName>
    <formula>IF( (ISPICKVAL( Dictamen__c , &apos;NO ADMITIDO&apos;) &amp;&amp; Aspirante_Desertor__c = False ) , 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>