force-app/main/default/objects/Ciclo_prepa__c/fields/DicP__c.field-meta.xml
<CustomField>
    <fullName>DicP__c</fullName>
    <formula>IF ( (ISPICKVAL( Dictamen__c , &apos;DICTAMEN PENDIENTE&apos;) || ISPICKVAL( Dictamen__c , &apos;DICTAMEN PENDIENTE POR REQUISITOS&apos;) || ISPICKVAL( Dictamen__c , &apos;LISTA DE ESPERA&apos;) || ( Resultados_Examen_Admisi_n__c &lt;&gt; NULL  &amp;&amp;  Clave_Dictamen__c = null )) &amp;&amp; Aspirante_Desertor__c = False, 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>