force-app/main/default/objects/Ciclo_prepa__c/fields/Dictamen__c.field-meta.xml
<CustomField>
    <fullName>Dictamen__c</fullName>
    <description>Dictamen del proceso de admisión</description>
    <label>Dictamen</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADMITIDO</fullName>
            </value>
            <value>
                <fullName>ADMITIDO CON TUTORIA</fullName>
            </value>
            <value>
                <fullName>CONDICIONADO</fullName>
            </value>
            <value>
                <fullName>DICTAMEN PENDIENTE</fullName>
            </value>
            <value>
                <fullName>LISTA DE ESPERA</fullName>
            </value>
            <value>
                <fullName>NO ADMITIDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>