force-app/main/default/objects/Ciclo_prepa__c/fields/DictamenAceptado__c.field-meta.xml
<CustomField>
    <fullName>DictamenAceptado__c</fullName>
    <description>El tipo de dictamen de Admisión es Aceptado</description>
    <formula>OR (ISPICKVAL(Dictamen__c,&apos;ADMITIDO&apos;),ISPICKVAL(Dictamen__c,&apos;ADMITIDO CON PASE DIRECTO&apos;), ISPICKVAL(Dictamen__c,&apos;ADMITIDO CON TUTORIA&apos;),
 ISPICKVAL(Dictamen__c,&apos;CONDICIONADO&apos;), ISPICKVAL(Dictamen__c,&apos;RECOMENDACIÓN&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dictamen tipo Aceptado</label>
    <type>Checkbox</type>
</CustomField>