force-app/main/default/objects/Ciclo_prepa__c/fields/Digito_Verificador__c.field-meta.xml
<CustomField>
    <fullName>Digito_Verificador__c</fullName>
    <label>Dígito Verificador</label>
    <length>1</length>
    <type>Text</type>
</CustomField>