force-app/main/default/objects/Ciclo_prepa__c/fields/Doctos_Entregados_Becas__c.field-meta.xml
<CustomField>
    <fullName>Doctos_Entregados_Becas__c</fullName>
    <label>Documentos entregados - Becas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Comprobante de Domicilio</fullName>
            </value>
            <value>
                <fullName>Comprobante de Ingresos</fullName>
            </value>
            <value>
                <fullName>Carta de Recomendación de Profesionista</fullName>
            </value>
            <value>
                <fullName>Carta de Motivos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>