force-app/main/default/objects/Ciclo_prepa__c/fields/Documentos_Entregados__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Entregados__c</fullName>
    <description>Indica los documentos validados</description>
    <label>Documentos Entregados</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>