force-app/main/default/objects/Ciclo_prepa__c/fields/Documentos_Faltantes__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Faltantes__c</fullName>
    <description>Indica los documentos faltantes</description>
    <label>Documentos Faltantes</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>