force-app/main/default/objects/Ciclo_prepa__c/fields/Documentos_Por_Validar__c.field-meta.xml
<CustomField>
    <fullName>Documentos_Por_Validar__c</fullName>
    <label>Documentos Por Validar</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>