force-app/main/default/objects/Ciclo_prepa__c/fields/EG_PerUltimaAsignatura__c.field-meta.xml
<CustomField>
    <fullName>EG_PerUltimaAsignatura__c</fullName>
    <description>Periodo de última asignatura para datos de egresados</description>
    <label>Periodo de última asignatura</label>
    <length>20</length>
    <type>Text</type>
</CustomField>