force-app/main/default/objects/Ciclo_prepa__c/fields/Email_Masivo__c.field-meta.xml
<CustomField>
    <fullName>Email_Masivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío de correo masivo</label>
    <type>Checkbox</type>
</CustomField>