force-app/main/default/objects/Ciclo_prepa__c/fields/Email_Personal1__c.field-meta.xml
<CustomField>
    <fullName>Email_Personal1__c</fullName>
    <description>Correo electrónico1</description>
    <label>Correo electrónico 1</label>
    <type>Email</type>
</CustomField>