force-app/main/default/objects/Ciclo_prepa__c/fields/Email_Personal2__c.field-meta.xml
<CustomField>
    <fullName>Email_Personal2__c</fullName>
    <description>Correo electrónico 2</description>
    <label>Correo electrónico 2</label>
    <type>Email</type>
</CustomField>