force-app/main/default/objects/Ciclo_prepa__c/fields/Email_Tutor__c.field-meta.xml
<CustomField>
    <fullName>Email_Tutor__c</fullName>
    <description>Correo electrónico del padre o tutor</description>
    <label>Correo de Padre / Tutor</label>
    <type>Email</type>
</CustomField>