force-app/main/default/objects/Ciclo_prepa__c/fields/Email_UPAEP__c.field-meta.xml
<CustomField>
    <fullName>Email_UPAEP__c</fullName>
    <description>Correo Alumno UPAEP</description>
    <label>Correo Alumno UPAEP</label>
    <type>Email</type>
</CustomField>