force-app/main/default/objects/Ciclo_prepa__c/fields/En_Portal_Egresados__c.field-meta.xml
<CustomField>
    <fullName>En_Portal_Egresados__c</fullName>
    <defaultValue>false</defaultValue>
    <label>En Portal Egresados</label>
    <type>Checkbox</type>
</CustomField>