force-app/main/default/objects/Ciclo_prepa__c/fields/Escuela_Procedencia__c.field-meta.xml
<CustomField>
    <fullName>Escuela_Procedencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relación hacia el objeto de Escuela de Procedencia</description>
    <label>Escuela de procedencia</label>
    <referenceTo>Escuelas__c</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <type>Lookup</type>
</CustomField>