force-app/main/default/objects/Ciclo_prepa__c/fields/Estatus_Admision__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Admision__c</fullName>
    <description>Estatus de Admisiones -&gt; se calcula en función de los conceptos</description>
    <label>Estatus de Admisiones</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASPIRANTE</fullName>
                <default>true</default>
                <label>ASPIRANTE</label>
            </value>
            <value>
                <fullName>ASPIRANTE CON EXAMEN</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE POR DICTAMINAR</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE POR MATRICULAR</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE MATRICULADO</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE PAGO PARCIAL</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE PAGO TOTAL</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE NO ADMITIDO</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE NO INTERESADO</fullName>
            </value>
            <value>
                <fullName>ASPIRANTE PENDIENTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>