force-app/main/default/objects/Ciclo_prepa__c/fields/Estatus_Alumno__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Alumno__c</fullName>
    <description>Estatus de Alumnos -&gt; se calcula en unisoft</description>
    <label>Estatus de Alumno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>