force-app/main/default/objects/Ciclo_prepa__c/fields/Estatus_de_Cobranza__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Cobranza__c</fullName>
    <label>Estatus de Cobranza</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Al corriente</fullName>
            </value>
            <value>
                <fullName>En Gestión Moroso</fullName>
            </value>
            <value>
                <fullName>En Gestión Pagando</fullName>
            </value>
            <value>
                <fullName>En negociación</fullName>
            </value>
            <value>
                <fullName>Incobrable</fullName>
            </value>
            <value>
                <fullName>Incobrable Insolvente</fullName>
            </value>
            <value>
                <fullName>Incobrable-Liquidado</fullName>
            </value>
            <value>
                <fullName>Incobrable no localizado</fullName>
            </value>
            <value>
                <fullName>Incobrable por dolo</fullName>
            </value>
            <value>
                <fullName>Localizado</fullName>
            </value>
            <value>
                <fullName>No Localizado</fullName>
            </value>
            <value>
                <fullName>Por Validar</fullName>
            </value>
            <value>
                <fullName>Recuperado</fullName>
            </value>
            <value>
                <fullName>Vencido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>