force-app/main/default/objects/Ciclo_prepa__c/fields/Estatus_Solicitud_Admision__c.field-meta.xml
<CustomField>
    <fullName>Estatus_Solicitud_Admision__c</fullName>
    <description>Estatus de la solicitud y documentos de admisión que se captura en UNISOFT</description>
    <label>Estatus Solicitud de Admisión</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SIN SOLICITUD</fullName>
            </value>
            <value>
                <fullName>SOLICITUD SIN DOCUMENTOS</fullName>
            </value>
            <value>
                <fullName>SOLICITUD CON DOCUMENTOS</fullName>
            </value>
            <value>
                <fullName>SOLICITUD VALIDADA SIN DOCUMENTOS</fullName>
            </value>
            <value>
                <fullName>SOLICITUD VALIDADA CON DOCUMENTOS</fullName>
            </value>
            <value>
                <fullName>SOLICITUD Y DOCUMENTOS VALIDADOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>