force-app/main/default/objects/Ciclo_prepa__c/fields/EstatusSolicitud_BecaOrd__c.field-meta.xml
<CustomField>
    <fullName>EstatusSolicitud_BecaOrd__c</fullName>
    <label>Estatus De Solicitud - Beca Ordinaria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pago Estudio Socioeconómico</fullName>
            </value>
            <value>
                <fullName>Solicitud de Beca sin Documentos</fullName>
            </value>
            <value>
                <fullName>Documentos Incompletos</fullName>
            </value>
            <value>
                <fullName>Documentos Completos</fullName>
            </value>
            <value>
                <fullName>En Proceso de Estudio Socioeconómico</fullName>
            </value>
            <value>
                <fullName>Resolutivo – Beca Otorgada</fullName>
            </value>
            <value>
                <fullName>Resolutivo - Beca No Otorgada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>