force-app/main/default/objects/Ciclo_prepa__c/fields/Evaluaciones_DSI_respondidas__c.field-meta.xml
<CustomField>
    <fullName>Evaluaciones_DSI_respondidas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Evaluación DSI respondida</label>
    <type>Checkbox</type>
</CustomField>