force-app/main/default/objects/Ciclo_prepa__c/fields/Examen_Admision__c.field-meta.xml
<CustomField>
    <fullName>Examen_Admision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Examen de Admisión</label>
    <referenceTo>ExamenAdmision__c</referenceTo>
    <relationshipLabel>Ciclos Prepa</relationshipLabel>
    <relationshipName>Ciclos_Prepa</relationshipName>
    <type>Lookup</type>
</CustomField>