force-app/main/default/objects/Ciclo_prepa__c/fields/ExamenAdmisionPresentado__c.field-meta.xml
<CustomField>
    <fullName>ExamenAdmisionPresentado__c</fullName>
    <formula>Resultados_Examen_Admisi_n__c  &lt;&gt; &apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Examen Admisión Presentado</label>
    <type>Checkbox</type>
</CustomField>