force-app/main/default/objects/Ciclo_prepa__c/fields/ExamenUbicacion1__c.field-meta.xml
<CustomField>
    <fullName>ExamenUbicacion1__c</fullName>
    <label>Examen Ubicación 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>