force-app/main/default/objects/Ciclo_prepa__c/fields/ExamenUbicacion2__c.field-meta.xml
<CustomField>
    <fullName>ExamenUbicacion2__c</fullName>
    <label>Examen ubicación 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>