force-app/main/default/objects/Ciclo_prepa__c/fields/ExamenUbicacion3__c.field-meta.xml
<CustomField>
    <fullName>ExamenUbicacion3__c</fullName>
    <label>Examen ubicación 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>