force-app/main/default/objects/Ciclo_prepa__c/fields/EXS__c.field-meta.xml
<CustomField>
    <fullName>EXS__c</fullName>
    <formula>IF ( (Resultados_Examen_Admisi_n__c  &lt;&gt; NULL  &amp;&amp;  Aspirante_Desertor__c = false), 1,0)</formula>
    <label>EXS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>