force-app/main/default/objects/Ciclo_prepa__c/fields/Fech_DoctosCompletos_Becas__c.field-meta.xml
<CustomField>
    <fullName>Fech_DoctosCompletos_Becas__c</fullName>
    <label>Fecha Documentos completos - Becas</label>
    <type>Date</type>
</CustomField>