force-app/main/default/objects/Ciclo_prepa__c/fields/Fech_ES_Becas__c.field-meta.xml
<CustomField>
    <fullName>Fech_ES_Becas__c</fullName>
    <description>Fecha Pago Est. Socioeconómico</description>
    <label>Fecha Pago Est. Socioeconómico</label>
    <type>Date</type>
</CustomField>