force-app/main/default/objects/Ciclo_prepa__c/fields/Fecha_Agencia_SocEco__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Agencia_SocEco__c</fullName>
    <label>Fecha de corte Agencia Est.  Socioeconó</label>
    <type>Date</type>
</CustomField>