force-app/main/default/objects/Ciclo_prepa__c/fields/Fecha_Descuento_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Descuento_Aplicado__c</fullName>
    <label>Fecha Descuento Aplicado</label>
    <type>Date</type>
</CustomField>